--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -6,6 +6,14 @@ dopepod
 
 {% block center-stage %}
 <div class="col results">
+  <div class="splash-logo noselect color-3">
+    <span class="char char-1">d</span>
+    <span class="char char-2">o</span>
+    <span class="char char-3">p</span>
+    <span class="char char-4">e</span>
+    <span class="char char-5">p</span>
+    <span class="char char-6">o</span>
+  </div>
   <div id="login-wrapper">
     <h1>
       Search for and listen to thousands of free podcasts on
