--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -9,7 +9,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
   <div class="row" id="showpod">
     <div class="col-4" id="showpod-l">
       <!-- BADGE -->
-      <div class="showpod-badge showpod-image">
+      <div class="showpod-image">
         <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}360x360bb.jpg&w=360&h=360&t=absolute" />
       </div>
       <ul class="showpod-side-list d-block d-lg-none">
