--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -1,6 +1,6 @@
 <div class="col results-content">
   <div class="row">
-    {% for podcast in results.podcasts %}
+    {% for podcast in results.podcasts_set.all %}
       <div class="col-12 col-lg-6 charts-box">
         <a class="showpod" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}" title="{{ podcast.title }}">
           <div class="charts-result">
@@ -18,6 +18,10 @@
             <p class="result-artist">
               <span>by </span>
               {{ podcast.artist }}
+            </p>
+            <p>
+              <span>last updated: </span>
+              {{ podcast.last_episode|date:'d M Y' }}
             </p>
           </div>
         </a>
